--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -17,6 +17,14 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <PreferenceCategory app:title="App">
+
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="runApp"
+            android:title="Run in background" />
+    </PreferenceCategory>
+
     <PreferenceCategory app:title="SMS Notification">
 
         <EditTextPreference
