--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         <EditText
             android:id="@+id/sensorsDataField"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="wrap_content"
             android:editable="false"
             android:ems="10"
             android:gravity="start|top" />
