--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,44 @@
             android:layout_height="wrap_content"
             android:text="Settings" />
 
-        <Button
-            android:id="@+id/smsNotificationTest"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Send Test SMS Notification" />
+            android:text="Test phone number" />
+
+        <EditText
+            android:id="@+id/phoneNumberField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="phone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/smsNotificationTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Send Test SMS Notification" />
+
+            <ProgressBar
+                android:id="@+id/testProgressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="invisible" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GPS data" />
 
         <EditText
             android:id="@+id/sensorsDataField"
@@ -34,6 +67,12 @@
             android:editable="false"
             android:ems="10"
             android:gravity="start|top" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Accelerometer data" />
 
         <EditText
             android:id="@+id/gpsLocationField"
@@ -44,4 +83,5 @@
             android:ems="10"
             android:gravity="start|top" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
