--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,6 @@
     <LinearLayout
         android:layout_width="395dp"
         android:layout_height="715dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -53,6 +51,12 @@
                 android:layout_weight="1"
                 android:visibility="invisible" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/testAlarmButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test alarm" />
 
         <TextView
             android:id="@+id/textView"
