--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFCC"
-    tools:context=".Alarm">
+    tools:context=".Alarm"
+    tools:layout_editor_absoluteX="16dp"
+    tools:layout_editor_absoluteY="16dp">
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,73 +21,60 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="387dp"
-        android:layout_height="253dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="386dp"
+        android:layout_height="254dp"
         android:scaleType="fitXY"
         android:src="@drawable/fall"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/needHelpButton"
-        android:layout_width="0dp"
+        android:layout_width="109dp"
         android:layout_height="114dp"
-        android:layout_marginTop="252dp"
-        android:layout_marginEnd="33dp"
-        android:background="g06363"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:scaleType="fitXY"
         android:src="@drawable/plus"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/noHelopButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/alarmLeftBar" />
 
     <ImageButton
-        android:id="@+id/noHelopButton"
-        android:layout_width="0dp"
-        android:layout_height="121dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="252dp"
-        android:layout_marginEnd="94dp"
-        android:background="g06363"
+        android:id="@+id/noHelpButton"
+        android:layout_width="109dp"
+        android:layout_height="114dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="72dp"
         android:scaleType="fitXY"
         android:src="@drawable/error"
         app:layout_constraintEnd_toStartOf="@+id/needHelpButton"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/alarmLeftBar" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="392dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="349dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="88dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="8dp"
         android:text="         A fall has been detected.\n         Do you still need help?"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#A83333"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/alarmLeftBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:layout_editor_absoluteX="0dp" />
 
     <ProgressBar
         android:id="@+id/alarmLeftBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="245dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="178dp"
+        android:layout_height="131dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
