--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -23,33 +23,22 @@
         android:id="@+id/imageView"
         android:layout_width="386dp"
         android:layout_height="254dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:scaleType="fitXY"
         android:src="@drawable/fall"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/needHelpButton"
-        android:layout_width="109dp"
-        android:layout_height="114dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/plus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alarmLeftBar" />
-
-    <ImageButton
         android:id="@+id/noHelpButton"
-        android:layout_width="109dp"
-        android:layout_height="114dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="144dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="140dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="72dp"
+        android:background="@android:color/transparent"
         android:scaleType="fitXY"
-        android:src="@drawable/error"
-        app:layout_constraintEnd_toStartOf="@+id/needHelpButton"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:src="@drawable/cancel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/alarmLeftBar" />
 
@@ -57,22 +46,21 @@
         android:id="@+id/textView4"
         android:layout_width="392dp"
         android:layout_height="79dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="         A fall has been detected.\n         Do you still need help?"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#A83333"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="25dp" />
 
     <ProgressBar
         android:id="@+id/alarmLeftBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="245dp"
-        android:layout_height="131dp"
+        android:layout_width="250dp"
+        android:layout_height="96dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
