--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:text="GPS data" />
 
         <EditText
-            android:id="@+id/sensorsDataField"
+            android:id="@+id/gpsData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:editable="false"
@@ -79,10 +79,23 @@
             android:text="Accelerometer data" />
 
         <EditText
-            android:id="@+id/gpsLocationField"
+            android:id="@+id/sensorsDataField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
+            android:editable="false"
+            android:ems="10"
+            android:gravity="start|top" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gyroscope data" />
+
+        <EditText
+            android:id="@+id/sensorsDataField2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:editable="false"
             android:ems="10"
             android:gravity="start|top" />
