--- a/app/src/main/res/layout-land/activity_alarm.xml
+++ b/app/src/main/res/layout-land/activity_alarm.xml
@@ -21,10 +21,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="329dp"
-        android:layout_height="175dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="96dp"
+        android:layout_width="377dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="16dp"
         android:scaleType="fitXY"
         android:src="@drawable/fall"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +32,10 @@
 
     <ImageButton
         android:id="@+id/noHelpButton"
-        android:layout_width="153dp"
-        android:layout_height="127dp"
-        android:layout_marginStart="128dp"
+        android:layout_width="164dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="280dp"
+        android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
         android:scaleType="fitXY"
         android:src="@drawable/cancel"
@@ -43,9 +44,9 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="392dp"
-        android:layout_height="79dp"
-        android:layout_marginStart="28dp"
+        android:layout_width="397dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="184dp"
         android:text="         A fall has been detected.\n         Do you still need help?"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#A83333"
@@ -57,12 +58,14 @@
     <ProgressBar
         android:id="@+id/alarmLeftBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="235dp"
-        android:layout_height="56dp"
+        android:layout_width="238dp"
+        android:layout_height="37dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
