--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -36,15 +36,15 @@
             app:title="@string/signature_title"
             app:useSimpleSummaryProvider="true" />
         <EditTextPreference
-            app:key="contactOne"
+            app:key="contact1"
             app:title="First phone number"
             app:useSimpleSummaryProvider="true" />
         <EditTextPreference
-            app:key="contactTwo"
+            app:key="contact2"
             app:title="Second phone number"
             app:useSimpleSummaryProvider="true" />
         <EditTextPreference
-            app:key="contactThree"
+            app:key="contact3"
             app:title="Third phone number"
             app:useSimpleSummaryProvider="true" />
         <SwitchPreference
